--- a/style.css
+++ b/style.css
@@ -157,15 +157,32 @@ body {
 .projects-grid {   
     padding-top: 2rem;
     display: grid;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
     color: var(--white);
     justify-items: center;
     position: relative;
     z-index: 10;
     width: 90%;
-    max-width: 1200px;
+    max-width: 1500px;
     margin: 0 auto;
+}
+
+@media screen and (max-width: 1200px) {
+    .projects-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    
+}
+
+@media screen and (max-width: 818px) {
+    .projects-grid {
+        margin-top: 2rem;
+        grid-template-columns: repeat(1, 1fr);
+        justify-content: center;
+        padding: 0rem 2rem;
+    
+} 
 }
 
 .project-card {
